// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toggle button should call handletoggle with argument "startRec" when clicked and recStatus is "off" and tab is valid 1`] = `
<Fragment>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Start Recording
  </button>
</Fragment>
`;

exports[`toggle button should call handletoggle with argument "startRec" when clicked and recStatus is "paused" 1`] = `
<Fragment>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Resume
  </button>
</Fragment>
`;

exports[`toggle button should call handletoggle with argument "stopRec" when clicked and recStatus is "on" 1`] = `
<Fragment>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Stop Recording
  </button>
</Fragment>
`;

exports[`toggle button should not call handletoggle when clicked and recStatus is "off" and tab is invalid 1`] = `
<Fragment>
  <button
    className="disabled-button"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Invalid Tab
  </button>
</Fragment>
`;
